--- a/terraform-manifests/dev.conf
+++ b/terraform-manifests/dev.conf
@@ -1,6 +1,6 @@
 bucket = "terraform-on-aws-project"
 key    = "iacdevops/dev/terraform.tfstate"
-region = "us-east-1" 
+region = "ap-south-1" 
 dynamodb_table = "iacdevops-dev-tfstate" 
 
 
