--- a/terraform-manifests/stag.conf
+++ b/terraform-manifests/stag.conf
@@ -1,4 +1,4 @@
 bucket = "terraform-on-aws-project"
 key    = "iacdevops/stag/terraform.tfstate"
-region = "us-east-1" 
+region = "ap-south-1" 
 dynamodb_table = "iacdevops-stag-tfstate" 
